--- a/index.html
+++ b/index.html
@@ -9,110 +9,111 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="path/to/your/custom.css">
   <style>
-      body {
-          margin: 0;
-          font-family: "Raleway", sans-serif;
-          background-color: lightgray;
-      }
+    body {
+    margin: 0;
+    padding: 0;
+    font-family: "Raleway", sans-serif;
+    background-color: lightgray;
+}
 
-      .bgimg {
-          background-image: url('/w3images/forestbridge.jpg');
-          min-height: 100vh;
-          background-position: center;
-          background-size: cover;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-      }
+.bgimg {
+    background-image: url('/w3images/forestbridge.jpg');
+    min-height: 100vh;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
-      h1 {
-          font-size: 6em;
-          margin: 0;
-      }
+h1 {
+    font-size: 6em;
+    margin: 0;
+}
 
-      hr {
-          width: 40%;
-          margin: 10px auto;
-          border-color: white;
-      }
+hr {
+    width: 40%;
+    margin: 10px auto;
+    border-color: white;
+}
 
-      p {
-          font-size: 1.5em;
-          margin: 0;
-      }
+p {
+    font-size: 1.5em;
+    margin: 0;
+}
 
-      .button-container {
-          display: flex;
-          flex-wrap: wrap;
-          gap: 20px;
-          justify-content: center;
-          align-items: center;
-          margin-top: 20px;
-          margin-bottom: 20px;
-      }
+.button-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
-      .button8 {
-          background-color: #3498db;
-          border: none;
-          color: white;
-          text-align: center;
-          text-decoration: none;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          font-size: 16px;
-          cursor: pointer;
-          border-radius: 10px;
-          overflow: hidden;
-          position: relative;
-          transition: background-color 0.3s ease, transform 0.3s ease;
-          width: 200px;
-          height: 200px;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      }
+.button8 {
+    background-color: #3498db;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    width: 200px;
+    height: 200px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 
-      .button8 img {
-          display: block;
-          margin: auto;
-          width: 70%;
-          height: auto;
-          border-radius: 50%;
-          transition: transform 0.3s ease;
-      }
+.button8 img {
+    display: block;
+    margin: auto;
+    width: 70%;
+    height: auto;
+    border-radius: 50%;
+    transition: transform 0.3s ease;
+}
 
-      .button8 span {
-          line-height: 1.2;
-      }
+.button8 span {
+    line-height: 1.2;
+}
 
-      .button8:hover {
-          background-color: #2980b9;
-          transform: scale(1.05);
-      }
+.button8:hover {
+    background-color: #2980b9;
+    transform: scale(1.05);
+}
 
-      .button8:active {
-          background-color: #1f618d;
-          transform: scale(0.95);
-      }
+.button8:active {
+    background-color: #1f618d;
+    transform: scale(0.95);
+}
 
-      .button8:active img {
-          transform: scale(0.9);
-      }
+.button8:active img {
+    transform: scale(0.9);
+}
 
-      .group-container {
-          text-align: center;
-          margin-top: 20px;
-          margin-bottom: 40px;
-      }
+.group-container {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
 
-      .group-label {
-          font-size: 36px; /* Adjusted font size */
-          font-weight: bold;
-          margin-bottom: 10px;
-          text-align: center;
-      }
-  </style>
+.group-label {
+    font-size: 36px; 
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
 </head>
 
 <body>
